# gngeo

./: configure.ac
src/generator68k/: Makefile.am
